--- a/Toolbox/Toolbox/Bootloader_Driver.xaml
+++ b/Toolbox/Toolbox/Bootloader_Driver.xaml
@@ -3,52 +3,49 @@
     x:Class="Toolbox.Bootloader_Driver"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Toolbox"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <StackPanel VerticalAlignment="Top" Orientation="Vertical">
-        <TextBlock Text="Bootloader锁与驱动" Style="{StaticResource TitleTextBlockStyle}"/>
+        <TextBlock Text="Bootloader锁与驱动" Style="{StaticResource TitleTextBlockStyle}" Margin="0,0,0,10"/>
         <StackPanel VerticalAlignment="Top" Orientation="Vertical">
             <TextBlock Text="设备解锁" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <Button x:Name="PickUnlockFileButton" Content="选择解锁文件"
-                        Click="PickUnlockFileClick" Margin="0,10,0,10"/>
-                <TextBlock x:Name="PickUnlockFileOutputTextBlock" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                <Button Content="选择解锁文件" Click="PickUnlockFileClick" Margin="0,10,10,10"/>
+                <TextBox x:Name="PickUnlockFileOutputTextBlock" TextWrapping="Wrap" Margin="0,10,10,10"
+                         IsReadOnly="True" IsHitTestVisible="False" PlaceholderText="请选择文件" MinWidth="150" FontStyle="Italic"/>
             </StackPanel>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <Button x:Name="UnlockBootloaderButton" Content="立即解锁"
-                        Click="UnlockBootloaderClick" Margin="0,0,10,10"/>
-                <Button x:Name="RelockBootloaderButton" Content="回锁BL"
-                        Click="RelockBootloaderClick" Margin="0,0,0,10"/>
+                <Button Content="立即解锁" Click="UnlockBootloaderClick" Margin="0,10,10,10"/>
+                <Button Content="回锁BL" Click="RelockBootloaderClick" Margin="0,10,0,10"/>
             </StackPanel>
         </StackPanel>
         <StackPanel VerticalAlignment="Top" Orientation="Vertical">
             <TextBlock Text="基本解锁命令" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <ComboBox x:Name="UnlockShell" Width="200" Margin="10">
+                <ComboBox x:Name="UnlockShell" Width="200" Margin="0,10,10,10" PlaceholderText="选择解锁命令">
                     <ComboBoxItem Content="oem unlock"/>
                     <ComboBoxItem Content="oem unlock-go"/>
                     <ComboBoxItem Content="flashing unlock"/>
                     <ComboBoxItem Content="flashing unlock_critical"/>
                 </ComboBox>
-                <Button x:Name="OemUnlockButton" Content="执行解锁命令"
-                Click="OemUnlockClick" Margin="0,10,0,10"/>
+                <Button Content="执行解锁命令" Click="OemUnlockClick" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
         <StackPanel VerticalAlignment="Top" Orientation="Vertical">
-            <TextBlock Text="小米解锁工具" Style="{StaticResource SubtitleTextBlockStyle}"/>
+            <TextBlock Text="其他解锁工具" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <Button x:Name="XiaomiUnlockButton" Content="打开解锁工具"
-                        Click="XiaomiUnlockClick" Margin="0,10,0,10"/>
+                <Button Content="小米解锁工具" Click="XiaomiUnlockClick" Margin="0,10,10,10"/>
+                <Button Content="ViCoo解锁工具" Click="ViqooUnlockClick" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
         <StackPanel VerticalAlignment="Top" Orientation="Vertical">
-            <TextBlock Text="ViQoo解锁工具" Style="{StaticResource SubtitleTextBlockStyle}"/>
+            <TextBlock Text="驱动补丁" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <Button x:Name="VicooUnlockButton" Content="打开ViCoo工具"
-                Click="ViqooUnlockClick" Margin="0,10,0,10"/>
+                <Button Content="安装ADB和Fastboot驱动" Click="InstallAdbClick" Margin="0,10,10,10"/>
+                <Button Content="安装高通9008驱动" Click="EdlDrvClick" Margin="0,10,10,10"/>
+                <Button Content="小米设备USB3.0补丁" Click="FixUsbClick" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
     </StackPanel>
