--- a/Toolbox/Toolbox/BootloaderDriver.xaml
+++ b/Toolbox/Toolbox/BootloaderDriver.xaml
@@ -37,7 +37,7 @@
             <TextBlock Text="其他解锁工具" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
                 <Button Content="小米解锁工具" Click="XiaomiUnlockClick" Margin="0,10,10,10"/>
-                <Button Content="ViCoo解锁工具" Click="ViqooUnlockClick" Margin="0,10,10,10"/>
+                <Button Content="ViQoo解锁工具" Click="ViqooUnlockClick" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
         <StackPanel VerticalAlignment="Top" Orientation="Vertical">
