--- a/Toolbox/Toolbox/MainWindow.xaml
+++ b/Toolbox/Toolbox/MainWindow.xaml
@@ -56,6 +56,7 @@
                     <NavigationViewItem Icon="Play" Content="BL锁及驱动" Tag="BootloaderDriver" Name="BLDriverMenuItem"/>
                     <NavigationViewItem Icon="Save" Content="刷入Rec及重启" Tag="Rec_Reboot" Name="RecRebootMenuItem"/>
                     <NavigationViewItem Icon="Repair" Content="线刷ROM" Tag="FlashRom" Name="FlashRomMenuItem"/>
+                    <NavigationViewItem Icon="More" Content="更多线刷" Tag="MoreFlash" Name="MoreFlashMenuItem"/>
                 </NavigationView.MenuItems>
                 <NavigationView.FooterMenuItems>
                     <NavigationViewItem Icon="Setting" Content="设置" Tag="Setting" Name="Setting"/>
