添加滚动条，优化窗口命名
添加滚动条，优化窗口命名

--- a/Toolbox/Toolbox/MainWindow.xaml
+++ b/Toolbox/Toolbox/MainWindow.xaml
@@ -37,16 +37,19 @@
         <Grid Name="PageContainer">
             <NavigationView x:Name="NavigationViewControl" IsTitleBarAutoPaddingEnabled="False" BackRequested="NavigationViewControl_BackRequested" SelectionChanged="NavigationView_SelectionChanged" PaneDisplayMode="Auto"  PaneTitle="Android 极客工具箱" IsSettingsVisible="False">
                 <NavigationView.Header>
-                    <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                        <TextBlock Text="设备状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="conninfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        <TextBlock Text="BL锁状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="BLinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        <TextBlock Text="VAB状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="VABinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        <TextBlock Text="设备代号：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="productinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        <Button x:Name="checkconn" Content="检查连接" Click="CheckconnClick" Margin="15,0,0,0"></Button>
+                    <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,0,55,0">
+                        <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                            <TextBlock Text="设备状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="conninfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                            <TextBlock Text="BL锁状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="BLinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                            <TextBlock Text="VAB状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="VABinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                            <TextBlock Text="设备代号：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="productinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                            <Button x:Name="checkconn" Content="检查连接" Click="CheckconnClick" Margin="15,0,0,0"></Button>
+                        </StackPanel>
+                        <ProgressBar x:Name="LoadingBar" Width="auto" IsIndeterminate="False" ShowPaused="False" ShowError="False" Margin="0,0,0,-15"/>
                     </StackPanel>
                 </NavigationView.Header>
                 <NavigationView.AutoSuggestBox>
