添加部分Mindows工具箱功能 Part 2 ( 未经测试 )
添加部分Mindows工具箱功能，未经测试，仅作代码参考

--- a/Toolbox/Toolbox/DeviceWarn.xaml
+++ b/Toolbox/Toolbox/DeviceWarn.xaml
@@ -8,7 +8,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
-
+    <Grid Name="PageContainer">
+        <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+            <TextBlock Text="为Windows分配空间" Style="{StaticResource TitleLargeTextBlockStyle}"/>
+            <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+                <TextBlock x:Name="ShowText" Style="{StaticResource BodyTextBlockStyle}"/>
+            </StackPanel>
+            <Button Click="ConfirmClick" Content="我已知晓，继续下载" />
+        </StackPanel>
     </Grid>
 </Window>
