--- a/Toolbox/Toolbox/ChooseIso.xaml
+++ b/Toolbox/Toolbox/ChooseIso.xaml
@@ -8,7 +8,22 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
-
+    <Grid Name="PageContainer">
+        <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+            <TextBlock Text="请选择Windows镜像" Style="{StaticResource TitleLargeTextBlockStyle}"/>
+            <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                    <TextBlock Text="注意：路径及文件名不得存在空格！" Style="{StaticResource BodyTextBlockStyle}"/>
+                    <TextBlock Text="【内置驱动】镜像请选择“不安装驱动”" Style="{StaticResource BodyTextBlockStyle}"/>
+                </StackPanel>
+                <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                    <Button x:Name="PickWindowsFile" Content="选择Windows镜像" Click="PickWindowsFileClick" Margin="0,10,10,10"/>
+                    <TextBox x:Name="PickWindowsFileOutput" TextWrapping="Wrap" Margin="0,10,10,10"
+                             IsReadOnly="True" IsHitTestVisible="False" PlaceholderText="请选择文件" MinWidth="150" FontStyle="Italic"/>
+                </StackPanel>
+                <ToggleSwitch x:Name="NoDriverToggle" Header="不安装驱动" Margin="0,10,10,10"/>
+                <Button Click="ConfirmClick" Content="确定" />
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
