--- a/Toolbox/Toolbox/MindowsWidget.xaml
+++ b/Toolbox/Toolbox/MindowsWidget.xaml
@@ -10,15 +10,25 @@
 
     <Grid Name="PageContainer">
         <StackPanel VerticalAlignment="Center" Orientation="Vertical">
-            <TextBlock Text="为Windows分配空间" Style="{StaticResource TitleLargeTextBlockStyle}"/>
+            <TextBlock Text="Mindows" Style="{StaticResource TitleLargeTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Center" Orientation="Vertical">
-                <TextBlock x:Name="ShowText" Text="概要" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBlock x:Name="ShowText" Text="Mindows小工具" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBlock x:Name="WarnText" Visibility="Collapsed" Style="{StaticResource BodyTextBlockStyle}"/>
                 <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-                    <TextBlock Text="您的Data分区可用空间约为" Style="{StaticResource BodyTextBlockStyle}"/>
-                    <TextBlock x:Name="AvailableSpaceText" Style="{StaticResource BodyTextBlockStyle}"/>
-                    <TextBlock Text="GB" Style="{StaticResource BodyTextBlockStyle}"/>
+                    <RadioButton x:Name="Set1" Content="设置为 1（尝试修复USB问题）"/>
+                    <RadioButton x:Name="Set3" Content="设置为 3（小部分设备初始值为3）"/>
+                    <RadioButton x:Name="Set6" Content="设置为 6（一般设备初始值为6）"/>
                 </StackPanel>
-                <Button x:Name="ConfirmClick" />
+                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                    <TextBox x:Name="DrvPath"/>
+                    <TextBox x:Name="ChooseDrv"/>
+                </StackPanel>
+                <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                    <Button x:Name="ChooseDrv"  Content="选择文件(夹)" Click="ChooseDrvClick" Margin="0,10,10,10"/>
+                    <TextBox x:Name="DrvPath" TextWrapping="Wrap" Margin="0,10,10,10"
+                             IsReadOnly="True" IsHitTestVisible="False" PlaceholderText="请选择文件(夹)" MinWidth="150" FontStyle="Italic"/>
+                </StackPanel>
+                <Button x:Name="ConfirmButton" Click="ConfirmClick" Content="安装" />
             </StackPanel>
             <Expander IsExpanded="True" Header="终端显示" Width="500">
                 <Expander.Content>
