--- a/Toolbox/Toolbox/MindowsTool.xaml
+++ b/Toolbox/Toolbox/MindowsTool.xaml
@@ -11,16 +11,7 @@
         <TextBlock Text="Mindows工具箱" Style="{StaticResource TitleTextBlockStyle}" Margin="0,0,0,10"/>
         <StackPanel VerticalAlignment="Top" Orientation="Vertical">
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <Button Content="下载资源" Click="DownloadResource" Margin="0,10,10,10">
-                    <Button.Flyout>
-                        <Flyout>
-                            <StackPanel>
-                                <TextBlock x:Name="DeviceWarnFlyout" Style="{ThemeResource BaseTextBlockStyle}" Text="是否确认继续操作？" Margin="0,0,0,12" />
-                                <Button Click="DownloadConfirmationClick" Content="确认下载" />
-                            </StackPanel>
-                        </Flyout>
-                    </Button.Flyout>
-                </Button>
+                <Button Content="下载资源" Click="MindowsDownloadResource" Margin="0,10,10,10"></Button>
                 <Button Content="打开一键安装工具" Click="OpenMindowsClick" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
@@ -65,9 +56,9 @@
         <StackPanel VerticalAlignment="Top" Orientation="Vertical">
             <TextBlock Text="恢复" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <Button Content="恢复Boot" Click="RecoverBoot" Margin="0,10,10,10"/>
-                <Button Content="恢复Boot到A" Click="RecoverBootToA" Margin="0,10,10,10"/>
-                <Button Content="恢复Boot到B" Click="RecoverBootToB" Margin="0,10,10,10"/>
+                <Button x:Name="RecoverBootButton" Content="恢复Boot" Click="RecoverBootClick" Margin="0,10,10,10"/>
+                <Button x:Name="RecoverBootAButton" Content="恢复Boot到A" Click="RecoverBootToAClick" Margin="0,10,10,10"/>
+                <Button x:Name="RecoverBootBButton" Content="恢复Boot到B" Click="RecoverBootToBClick" Margin="0,10,10,10"/>
                 <Button Content="恢复分区表" Click="RecoverPart" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
@@ -84,10 +75,10 @@
                 <Button Content="修复引导" Click="FixEsp" Margin="0,10,10,10"/>
                 <Button Content="禁用驱动签名" Click="DisableDriverSign" Margin="0,10,10,10"/>
                 <Button Content="标记EFI分区" Click="LabelEfi" Margin="0,10,10,10"/>
-                <Button Content="刷入Devcfg" Click="FlashDevcfg" Margin="0,10,10,10"/>
+                <Button Content="刷入Devcfg" Click="FlashDevcfg" x:Name="FlashDevcfgButton" Margin="0,10,10,10"/>
                 <Button Content="安装驱动" Click="InstallDrive" Margin="0,10,10,10"/>
                 <Button Content="打开Dism++" Click="OpenDism" Margin="0,10,10,10"/>
-                <Button Content="进入大容量模式" Click="EnterMassMode" Margin="0,10,10,10"/>
+                <Button Content="进入大容量模式" Click="EnterMassMode" x:Name="EnterMassModeButton" Margin="0,10,10,10"/>
                 <Button Content="重装Windows" Click="ReinstallWindows" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
