--- a/Toolbox/Toolbox/MindowsWidget.xaml
+++ b/Toolbox/Toolbox/MindowsWidget.xaml
@@ -19,16 +19,11 @@
                     <RadioButton x:Name="Set3" Content="设置为 3（小部分设备初始值为3）"/>
                     <RadioButton x:Name="Set6" Content="设置为 6（一般设备初始值为6）"/>
                 </StackPanel>
-                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-                    <TextBox x:Name="DrvPath"/>
-                    <TextBox x:Name="ChooseDrv"/>
-                </StackPanel>
                 <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                    <Button x:Name="ChooseDrv"  Content="选择文件(夹)" Click="ChooseDrvClick" Margin="0,10,10,10"/>
-                    <TextBox x:Name="DrvPath" TextWrapping="Wrap" Margin="0,10,10,10"
-                             IsReadOnly="True" IsHitTestVisible="False" PlaceholderText="请选择文件(夹)" MinWidth="150" FontStyle="Italic"/>
+                    <Button x:Name="ChooseDrvButton"  Content="选择文件(夹)" Click="ChooseDrvClick" Margin="0,10,10,10"/>
+                    <TextBox x:Name="DrvPathTextBox" TextWrapping="Wrap" Margin="0,10,10,10" IsReadOnly="True" IsHitTestVisible="False" PlaceholderText="请选择文件(夹)" MinWidth="150" FontStyle="Italic"/>
+                    <Button Click="ConfirmClick" Content="确定" x:Name="ConfirmButton"/>
                 </StackPanel>
-                <Button x:Name="ConfirmButton" Click="ConfirmClick" Content="安装" />
             </StackPanel>
             <Expander IsExpanded="True" Header="终端显示" Width="500">
                 <Expander.Content>
