--- a/Toolbox/Toolbox/BootloaderDriver.xaml
+++ b/Toolbox/Toolbox/BootloaderDriver.xaml
@@ -8,8 +8,7 @@
     mc:Ignorable="d">
 
     <StackPanel VerticalAlignment="Top" Orientation="Vertical">
-        <TextBlock Text="Bootloader锁与驱动" Style="{StaticResource TitleTextBlockStyle}" Margin="0,0,0,10"/>
-        <StackPanel VerticalAlignment="Top" Orientation="Vertical">
+        <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,20,0,0">
             <TextBlock Text="设备解锁" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
                 <Button Content="选择解锁文件" Click="PickUnlockFileClick" Margin="0,10,10,10"/>
@@ -17,11 +16,11 @@
                          IsReadOnly="True" IsHitTestVisible="False" PlaceholderText="请选择文件" MinWidth="150" FontStyle="Italic"/>
             </StackPanel>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                <Button Content="立即解锁" Click="UnlockBootloaderClick" Margin="0,10,10,10"/>
-                <Button Content="回锁BL" Click="RelockBootloaderClick" Margin="0,10,0,10"/>
+                <Button Content="立即解锁" Click="UnlockBootloaderClick" Margin="0,10,10,10" Width="185"/>
+                <Button Content="回锁BL" Click="RelockBootloaderClick" Margin="0,10,0,10" Width="185"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel VerticalAlignment="Top" Orientation="Vertical">
+        <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,20,0,0">
             <TextBlock Text="基本解锁命令" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
                 <ComboBox x:Name="UnlockShell" Width="200" Margin="0,10,10,10" PlaceholderText="选择解锁命令">
@@ -33,14 +32,14 @@
                 <Button Content="执行解锁命令" Click="OemUnlockClick" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel VerticalAlignment="Top" Orientation="Vertical">
+        <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,20,0,0">
             <TextBlock Text="其他解锁工具" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
                 <Button Content="小米解锁工具" Click="XiaomiUnlockClick" Margin="0,10,10,10"/>
                 <Button Content="ViQoo解锁工具" Click="ViqooUnlockClick" Margin="0,10,10,10"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel VerticalAlignment="Top" Orientation="Vertical">
+        <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,20,0,0">
             <TextBlock Text="驱动补丁" Style="{StaticResource SubtitleTextBlockStyle}"/>
             <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
                 <Button Content="安装ADB和Fastboot驱动" Click="InstallAdbClick" Margin="0,10,10,10"/>
