--- a/Toolbox/Toolbox/MainWindow.xaml
+++ b/Toolbox/Toolbox/MainWindow.xaml
@@ -6,77 +6,83 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Grid>
-        <Border
-                Canvas.ZIndex="0"
-                IsHitTestVisible="False">
-            <Grid
-                    Height="48"
-                    Margin="48,0,0,0"
-                    VerticalAlignment="Top"
-                    Padding="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Image
-                        x:Name="AppFontIcon"
-                        Width="16"
-                        Height="16"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        Source="/Images/Square44x44Logo.scale-100.png" />
-                <TextBlock
-                        Margin="12,0,0,0"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        Style="{StaticResource CaptionTextBlockStyle}"
-                        Text="{x:Bind GetAppTitleFromSystem()}"/>
-            </Grid>
-        </Border>
-        <Grid Name="PageContainer">
-            <NavigationView x:Name="NavigationViewControl" IsTitleBarAutoPaddingEnabled="False" BackRequested="NavigationViewControl_BackRequested" SelectionChanged="NavigationView_SelectionChanged" PaneDisplayMode="Auto"  PaneTitle="Android 极客工具箱" IsSettingsVisible="False">
-                <NavigationView.AutoSuggestBox>
-                    <AutoSuggestBox x:Name="ASB" PlaceholderText="搜索" QueryIcon="Find" QuerySubmitted="QuerySubmitted" SuggestionChosen="SuggestionChosen"/>
-                </NavigationView.AutoSuggestBox>
-                <NavigationView.PaneCustomContent>
-                    <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,0,55,0">
-                        <ProgressBar x:Name="LoadingBar" Width="auto" IsIndeterminate="False" ShowPaused="False" ShowError="False" Margin="0,0,0,0"/>
-                        <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                            <TextBlock Text="设备状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="conninfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        </StackPanel>
-                        <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                            <TextBlock Text="BL锁状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="BLinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        </StackPanel>
-                        <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                            <TextBlock Text="VAB状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="VABinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        </StackPanel>
-                        <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-                            <TextBlock Text="设备代号：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                            <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="productinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
-                        </StackPanel>
-                        <Button x:Name="checkconn" Content="检查连接" Click="CheckconnClick" Margin="15,0,0,0"></Button>
-                        <InfoBar x:Name="LoadingTip" IsOpen="False" Severity="Warning" Title="操作中"/>
-                    </StackPanel>
-                </NavigationView.PaneCustomContent>
-                <NavigationView.MenuItems>
-                    <NavigationViewItem Icon="Play" Content="BL锁及驱动" Tag="BootloaderDriver" Name="BLDriverMenuItem"/>
-                    <NavigationViewItem Icon="Save" Content="刷入Rec及重启" Tag="Rec_Reboot" Name="RecRebootMenuItem"/>
-                    <NavigationViewItem Icon="Repair" Content="线刷ROM" Tag="FlashRom" Name="FlashRomMenuItem"/>
-                    <NavigationViewItem Icon="More" Content="更多线刷" Tag="MoreFlash" Name="MoreFlashMenuItem"/>
-                    <NavigationViewItem Icon="Keyboard" Content="Mindows工具箱" Tag="MindowsTool" Name="MindowsToolMenuItem"/>
-                </NavigationView.MenuItems>
-                <NavigationView.FooterMenuItems>
-                    <NavigationViewItem Icon="Setting" Content="设置" Tag="Setting" Name="Setting"/>
-                </NavigationView.FooterMenuItems>
-                <Frame x:Name="ContentFrame" Navigated="ContentFrame_Navigated" Padding="55,10,0,0"/>
-            </NavigationView>
-        </Grid>
-    </Grid>
+
     <Window.SystemBackdrop>
         <MicaBackdrop Kind="BaseAlt"/>
     </Window.SystemBackdrop>
+
+    <Grid Name="PageContainer">
+        <Grid
+            x:Name="AppTitleBar"
+            Height="48"
+            Margin="48,0,0,0"
+            VerticalAlignment="Top"
+            Padding="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Image
+                x:Name="AppFontIcon"
+                Width="16"
+                Height="16"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Source="/Images/Square44x44Logo.scale-100.png" />
+            <TextBlock
+                Margin="12,0,0,0"
+                Grid.Column="1"
+                VerticalAlignment="Center"
+                Style="{StaticResource CaptionTextBlockStyle}"
+                Text="{x:Bind GetAppTitleFromSystem()}"/>
+        </Grid>
+        <NavigationView
+            x:Name="NavigationViewControl"
+            IsTitleBarAutoPaddingEnabled="False"
+            AlwaysShowHeader="True"
+            BackRequested="NavigationViewControl_BackRequested"
+            SelectionChanged="NavigationView_SelectionChanged"
+            IsTabStop="False"
+            PaneDisplayMode="Auto"
+            PaneTitle="Android 极客工具箱"
+            IsSettingsVisible="False">
+            <NavigationView.AutoSuggestBox>
+                <AutoSuggestBox x:Name="ASB" PlaceholderText="搜索" QueryIcon="Find" QuerySubmitted="QuerySubmitted" SuggestionChosen="SuggestionChosen"/>
+            </NavigationView.AutoSuggestBox>
+            <NavigationView.PaneCustomContent>
+                <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,0,55,0">
+                    <ProgressBar x:Name="LoadingBar" Width="auto" IsIndeterminate="False" ShowPaused="False" ShowError="False" Margin="0,0,0,0"/>
+                    <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                        <TextBlock Text="设备状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="conninfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                    </StackPanel>
+                    <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                        <TextBlock Text="BL锁状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="BLinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                    </StackPanel>
+                    <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                        <TextBlock Text="VAB状态：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="VABinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                    </StackPanel>
+                    <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                        <TextBlock Text="设备代号：" Style="{StaticResource BodyStrongTextBlockStyle}" TextWrapping="Wrap" Padding="20,5,0,0"/>
+                        <TextBlock Text="未知" Style="{StaticResource BodyTextBlockStyle}" x:Name="productinfo" TextWrapping="Wrap" Padding="0,5,0,0"/>
+                    </StackPanel>
+                    <Button x:Name="checkconn" Content="检查连接" Click="CheckconnClick" Margin="15,0,0,0"></Button>
+                    <InfoBar x:Name="LoadingTip" IsOpen="False" Severity="Warning" Title="操作中"/>
+                </StackPanel>
+            </NavigationView.PaneCustomContent>
+            <NavigationView.MenuItems>
+                <NavigationViewItem Icon="Play" Content="BL锁及驱动" Tag="BootloaderDriver" Name="BLDriverMenuItem"/>
+                <NavigationViewItem Icon="Save" Content="刷入Rec及重启" Tag="Rec_Reboot" Name="RecRebootMenuItem"/>
+                <NavigationViewItem Icon="Repair" Content="线刷ROM" Tag="FlashRom" Name="FlashRomMenuItem"/>
+                <NavigationViewItem Icon="More" Content="更多线刷" Tag="MoreFlash" Name="MoreFlashMenuItem"/>
+                <NavigationViewItem Icon="Keyboard" Content="Mindows工具箱" Tag="MindowsTool" Name="MindowsToolMenuItem"/>
+            </NavigationView.MenuItems>
+            <NavigationView.FooterMenuItems>
+                <NavigationViewItem Icon="Setting" Content="设置" Tag="Setting" Name="Setting"/>
+            </NavigationView.FooterMenuItems>
+            <Frame x:Name="ContentFrame" Navigated="ContentFrame_Navigated" Padding="55,10,0,0"/>
+        </NavigationView>
+    </Grid>
 </Window>
