--- a/Toolbox/Toolbox/MainWindow.xaml
+++ b/Toolbox/Toolbox/MainWindow.xaml
@@ -71,10 +71,10 @@
                 </StackPanel>
             </NavigationView.PaneCustomContent>
             <NavigationView.MenuItems>
-                <NavigationViewItem Icon="Play" Content="Bootloader 和驱动" Tag="Toolbox.BootloaderDriver" Name="BLDriverMenuItem"/>
-                <NavigationViewItem Icon="Save" Content="刷入Rec及重启" Tag="Toolbox.Rec_Reboot" Name="RecRebootMenuItem"/>
+                <NavigationViewItem Icon="WebCam" Content="Bootloader 和驱动" Tag="Toolbox.BootloaderDriver" Name="BLDriverMenuItem"/>
+                <NavigationViewItem Icon="Sync" Content="刷入Rec及重启" Tag="Toolbox.Rec_Reboot" Name="RecRebootMenuItem"/>
                 <NavigationViewItem Icon="Repair" Content="线刷ROM" Tag="Toolbox.FlashRom" Name="FlashRomMenuItem"/>
-                <NavigationViewItem Icon="More" Content="更多线刷" Tag="Toolbox.MoreFlash" Name="MoreFlashMenuItem"/>
+                <NavigationViewItem Icon="More" Content="自定义刷入" Tag="Toolbox.MoreFlash" Name="MoreFlashMenuItem"/>
                 <NavigationViewItem Icon="Keyboard" Content="Mindows工具箱" Tag="Toolbox.MindowsTool" Name="MindowsToolMenuItem"/>
             </NavigationView.MenuItems>
             <Frame x:Name="ContentFrame" Navigated="ContentFrame_Navigated" Padding="55,10,0,0"/>
