--- a/Toolbox/MoreFlash.xaml
+++ b/Toolbox/MoreFlash.xaml
@@ -7,8 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Margin="0,0,0,10">
-    <ScrollViewer>
-        <StackPanel VerticalAlignment="Top" Orientation="Vertical">
+    <ScrollView>
+        <StackPanel VerticalAlignment="Top" Orientation="Vertical" Margin="0,20,0,20">
             <StackPanel VerticalAlignment="Top" Orientation="Vertical">
                 <TextBlock Text="ADB Sideload" Style="{StaticResource SubtitleTextBlockStyle}"/>
                 <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
@@ -49,5 +49,5 @@
                 </Expander.Content>
             </Expander>
         </StackPanel>
-    </ScrollViewer>
+    </ScrollView>
 </Page>
