--- a/Toolbox/SettingsPage.xaml
+++ b/Toolbox/SettingsPage.xaml
@@ -8,7 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
-        <TextBlock Text="Setting Page Here."/>
+    <Grid Margin="0,20,0,20">
+        <TextBlock Text="设置页面正在开发中..."/>
     </Grid>
 </Page>
